styles.css
body {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  max-width: 100vw;
  max-height: 100vh;
  flex-flow: column;
  -webkit-flex-flow: column;
  padding: 0;
  border: 0;
  margin: 0;
  background-color: lightgray;
  font-family: arial;
}

/* ul .nav-links {
  display: flex;
  flex-direction: row;
  flex-flow: wrap;
  text-decoration: none;
  justify-content: space-evenly;
  align-content: center;
} */

/* The hero image */
.hero-image {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-content: center;
  align-items: center;
  justify-content: center;
  flex-flow: column;
  -webkit-flex-flow: column;
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/bg-4.jpeg");
  min-height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 0;
  margin: 0;
  min-width: 100vw;
  min-height: 100vh;
}

.invisible {
  visibility: hidden;
}

.visible {
  visibility: visible;
}

/* Place text in the middle of the image */
.hero-text {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  text-align: center;
  position: absolute;
  color: white;
  align-items: center;
  align-content: center;
  justify-content: center;
}

/* Navigation */
 /* .navbar {
  display: flex;
  flex-flow: row;
  list-style-type: none;
  background: black;
  align-items: center;
  align-content: space-between;
}
*/

.navbar {
  position: fixed;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-content: center;
  flex-flow: row;
  -webkit-flex-flow: row;
  justify-content: space-between;
  min-height: fit-content;
  font-size: 18px;
  /* background-image: linear-gradient(260deg, slategray 0%, #000 100%); */
  background: rgba(0, 0, 0, 0.5);
  border: 1px solid rgba(0, 0, 0, 0.2);
  padding-bottom: 10px;
  list-style-type: none;
  min-width: 100vw;
}

.navbar-scroll {
  position: fixed;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-content: center;
  flex-flow: row;
  justify-content: space-between;
  min-height: fit-content;
  font-size: 18px;
  background: rgba(0, 0, 0, 0.5);
  border: 1px solid rgba(0, 0, 0, 0.2);
  padding-bottom: 10px;
  list-style-type: none;
  min-width: 100vw;
}

.area {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  justify-content: center;
  align-content: center;
  margin-top: 10%;
}
.area-map {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  justify-content: center;
  align-self: center;
}
.navbar img {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  max-width: 100%;
}

.navlink-container {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  justify-content: space-evenly;
  align-content: flex-end;
  min-width: 70%;
}



.nav-img {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-self: center;
  max-width: 10%;
  margin: 10px;
  padding: 10px;

}

.navbar a {
  text-decoration: none;
  color: white;
}

.navbar li {
  list-style-type: none;
  color: white;
}

.navbar ul {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  justify-content: space-evenly;
  align-content: flex-end;
  min-width: 100%;
}

.main-nav {
  list-style-type: none;
  display: none;
}

.nav-links,
.logo {
  text-decoration: none;
  /* color: rgba(255, 255, 255, 0.7); */
  color: black;
  text-decoration: none;
}

/* .main-nav li {
  text-align: center;
  align-self: center;
  margin: 15px auto;
} */

.main-logo {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  max-height: 50vh;
  max-width: 50vw;
  align-self: center;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.main-logo-img {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  max-height: 100%;
  max-width: 100%;
  align-self: center;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.main-slogan {

}
.logo {
  display: inline-block;
  font-size: 22px;
}

.navbar-toggle {
  position: absolute;
  top: 10px;
  right: 20px;
  cursor: pointer;
  color: rgba(255, 255, 255, 0.8);
  font-size: 24px;
}





footer {
  background: black;
  color: white;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-content: center;
  flex-flow: column;
  -webkit-flex-flow: column;
  justify-content: space-between;
  align-items: center;
}

footer p {
  align-self: center;
  align-content: center;
}

footer img {
  padding-top: 10px;
}

.brands {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  max-width: 100%;
  /* transition-timing-function: ease-in-out;
  transition-delay: 5s; */
}

.brand-container {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  max-width: 40vh;
  max-height: 40vh;
  justify-content: center;
}

.contact {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  align-content: center;
  align-items: center;
}

.contact input {
  background: #F4F6F6;
  min-height: 10vh;
  min-width: 50vw;
  border-radius: 25px;
}

.contact .submit {
  min-width: 5vw;
  background-color: #95A5A6;
  align-self: center;
  align-items: center;
  align-content: center;
  color: white;
}

.icon-container {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  min-width: 100%;
  min-height: 25%;
  justify-content: center;
  align-items: flex-start;
  /* background-color: yellow; */
  margin-bottom: 30px;
}

.products {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-content: space-evenly;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  align-items: center;
  justify-content: space-evenly;
  margin-top: 40px;
  /* background-color: purple; */
}

.navbar {
display: flex;
display: -webkit-box;
display: -webkit-flex;
display: -ms-flexbox;
display: -moz-box;
justify-content: space-evenly;
height: 70px;
align-items: center;
padding: 0;
margin: 0;
flex-flow: row;
}

.main-nav {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: row;
}

.main-nav li {
  margin: 0;
}

.nav-links {
  text-decoration: none;
}

.logo {
  margin-top: 0;
}

.navbar-toggle {
  display: none;
}

.logo:hover {
  background-color: rgba(255, 255, 255, 1);
}

li:hover {
  background-color: darkgray;
}

.services {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  justify-content: space-evenly;
  align-items: center;
  border-bottom: 1px solid black;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  /* background-color: lightblue; */
}

.services .card {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  flex-basis: 400px;
  align-items: center;
  align-content: center;
  justify-content: flex-start;
  min-height: 600px;
  margin-bottom: 10px;
  padding: 10px;
  margin: 10px;
  border-radius: 100px;
  background-color: white;
}

.services .card i {
  font-size: 50px;
}

.services .card p h4 {
  font-size: 20px;
}

.services .card h4 {
  font-size: 20px;
  min-width: 100%;
  margin: 0;
}

.service-container{
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: column;
  -webkit-flex-flow: column;
  margin: 0 10% 10% 10%;
  justify-content: center;
  align-items: center;
  align-self: center;
  /* background-color: gray; */
}

.service-heading {
  width: 100%;
  min-width: 100%;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  align-items: center;
  align-content: center;
  align-self: center;
  justify-content: center;
  /* background-color: purple; */
}

.service-description {
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  align-items: center;
  align-content: center;
  align-self: center;
  justify-content: center;
  max-height: 100%;
}
.service-description p {
  max-height: 100%;
}
.youngstown {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/downtown_youngstown.jpg");;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: -moz-box;
  align-content: center;
  align-items: center;
  flex-flow: column;
  -webkit-flex-flow: column;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 10%;
  margin: 10%;
  min-width: 40vw;
  min-height: 40vh;
  color: white;
}

